--- a/index.html
+++ b/index.html
@@ -7,11 +7,80 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="css/estilo.css" rel="stylesheet">
 
-    <title>Olá, mundo!</title>
+    <title>Está na Tag, está no Ar!</title>
   </head>
   <body>
-    <h1>Olá, mundo!</h1>
+    <nav>
+      <div class="navbar navbar-expand-lg navbar-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Tag.com <span class="sr-only">(Página atual)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Games</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Esportes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Redes Sociais</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+              <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Pesquisar</button>
+            </form>
+          </div>
+      </div>     
+    </nav>
+
+    <head>
+      <center>
+        <div class="imgLogo">
+      <img src="img/logo/logoaju.png" alt="Tag" width="25%" height="auto">
+        </div>
+      </center>
+
+      <div class="ajSlide">
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/slide/tecnologia.jpg" alt="Primeiro Slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/slide/tech.jpg" alt="Segundo Slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/slide/eradainfo.jpg" alt="Terceiro Slide">
+          </div>
+        </div>
+      </div>
+      </div>
+    </head>
+
+    <main>Conteudo</main>
+
+    <section>Lateral</section>
+
+    <aside>Barra Lateral</aside>
+
+    <footer>Final</footer>
+
+
+
+
+
+
+
+
+
+    
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
