--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
     <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="css/estilo.css" rel="stylesheet">
-
     <title>Está na Tag, está no Ar!</title>
   </head>
+
   <body>
     <nav>
+      <!--Logo centralizado e ajustado no topo-->
+      <center>
+      <div class="container">
+        <div class="imgLogo">
+        <img src="img/logo/logoaju.png" alt="Tag" width="25%" height="auto">
+        </div>
+      </div>
+      </center>
+
+      <!--Navegador no Topo-->
       <div class="navbar navbar-expand-lg navbar-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alterna navegação">
             <span class="navbar-toggler-icon"></span>
@@ -39,32 +48,26 @@
           </div>
       </div>     
     </nav>
-
-    <head>
-      <center>
-        <div class="imgLogo">
-      <img src="img/logo/logoaju.png" alt="Tag" width="25%" height="auto">
-        </div>
-      </center>
-
-      <div class="ajSlide">
+   
+    <header>
+      <div class="slideAju">
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/slide/tecnologia.jpg" alt="Primeiro Slide">
+            <img class="d-block w-100" src="img/slide/techajuste.png" alt="Tecnologia Hoje">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slide/tech.jpg" alt="Segundo Slide">
+            <img class="d-block w-100" src="img/slide/techaju.jpg" alt="Avanços Tecnologicos">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slide/eradainfo.jpg" alt="Terceiro Slide">
+            <img class="d-block w-100" src="img/slide/eradainfoaju.jpg" alt="Informação">
           </div>
         </div>
       </div>
       </div>
-    </head>
+    </header>
 
-    <main>Conteudo</main>
+    <main>Conteúdo</main>
 
     <section>Lateral</section>
 
