--- a/index.html
+++ b/index.html
@@ -67,23 +67,34 @@
       </div>
     </header>
 
-    <main>Conteúdo</main>
+    <main>
+      <div class="container">
+       <div class="row">
+        <div class="col-md-4">
+          <img src="img/grid/facebooknot.jpg" alt="Noticia Facebook" width="80%">
+        </div>
+        <div class="col-md-4">
+          <img src="img/grid/notwitter.jpg" alt="Noticia Twitter" width="80%">
+        </div>
+        <div class="col-md-4">
+          <img src="img/grid/microsoft.jpg" alt="Noticia Microsoft" width="80%">
+        </div>
+       </div>
+      </div>
+
+    </main>
 
     <section>Lateral</section>
 
     <aside>Barra Lateral</aside>
 
-    <footer>Final</footer>
-
-
-
-
-
-
-
-
-
-    
+    <!--Footer com texto com cores da paleta de cor-->
+    <footer>
+      <div style="padding-left: px;">
+      Sobre avanços da Tecnologia | Interação e Informação | Está na 
+      <font color="red">TAG</font> está no <font color="red">AR</font>!
+      </div>
+    </footer>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
