--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
       </div>
     </header>
 
-    <main>
-      <div class="container">
+    <aside>Barra Lateral</aside>
+
+    <section>
+      <div class="container" style="padding: 2% 2%;">
        <div class="row">
         <div class="col-md-4">
           <img src="img/grid/facebooknot.jpg" alt="Noticia Facebook" width="80%">
@@ -81,12 +83,14 @@
         </div>
        </div>
       </div>
+    </section>
 
+    <main>
+      <div class="container">
+        <img src="img/conteudo/gnoticia.jpg" alt="Google" width="10%"/>
+        Google vai permitir que buscadores rivais apareçam de graça em dispositivos Android na Europa
+      </div>
     </main>
-
-    <section>Lateral</section>
-
-    <aside>Barra Lateral</aside>
 
     <!--Footer com texto com cores da paleta de cor-->
     <footer>
