--- a/index.html
+++ b/index.html
@@ -69,7 +69,40 @@
       </div>
     </header>
 
-    <aside>Barra Lateral</aside>
+    <aside>
+      <div class="container">
+        <div class="row">
+          <div class="col-md">
+            Uma de três colunas
+          </div>
+          <div class="col-md">
+            Uma de três colunas
+          </div>
+          <div class="col-md">  
+
+              <h6>Editores</h6>
+
+              <div class="row">
+               <div class="col-sm">
+               <img class="imgEditores" src="img/avatar/av2.png"/>
+               <p style="font-size: 0.9em;">Marcos<br>
+                 Isaias</p>
+              </div>
+
+              <div class="col-sm">
+               <img class="imgEditores" src="img/avatar/av1.png"/>
+               <p style="font-size: 0.9em;">Arthur<br> 
+                 Chaves</p>
+              </div>
+
+              <div class="col-sm">
+               <img class="imgEditores" src="img/avatar/av3.png"/>
+               <p style="font-size: 0.9em;">Leonardo<br> 
+                  Albrecht</p>
+              </div>
+            </div>
+         </div>
+    </aside>
 
     <!--Grid com 3 colunas, para sistema de noticias em destaque-->
     <section>
@@ -102,14 +135,16 @@
     <main>
       <div class="container">
         <img src="img/conteudo/gnoticia.png" alt="Google" width="25%"/>
-        Google vai permitir que buscadores rivais apareçam de graça em dispositivos Android na Europa
+        <a href="#" id="linkRed">Google vai permitir que buscadores rivais 
+          apareçam de graça em dispositivos Android na Europa</a>
       </div>
 
       <hr>
 
       <div class="container">
         <img src="img/conteudo/inoticia.png" alt="Noticia" width="25%"/>
-        Internet global sofre falha e grandes sites saem do ar
+        <a href="#" id="linkRed">Internet global sofre falha e grandes 
+          sites saem do ar</a>
       </div>
     </main>
 
